adicionando auth
