# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AuthController;
 use App\Http\Controllers\TransactionController;
 use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
@@ -21,6 +22,8 @@ use Illuminate\Support\Facades\Route;
 });
  */
 
-Route::post('/users', [UserController::class, 'store']);
+Route::middleware('auth:sanctum')->post('/users', [UserController::class, 'store']);
 
-Route::post('/transfer', [TransactionController::class, 'transfer']);
+Route::middleware('auth:sanctum')->post('/transfer', [TransactionController::class, 'transfer']);
+
+Route::post('/login', [AuthController::class, 'login']);
